--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -197,8 +197,9 @@ $header-bg-color-secondary: #2196f3 !default;
     right: 0;
     background: #ffffff;
     color: #ffffff;
-    background-color: #1b4dc1;
+    background-color: #0040a8;
     overflow: auto;
+    opacity: 88%;
 }
   
 
